modified form file

--- a/form.html
+++ b/form.html
@@ -50,20 +50,33 @@
             <lable for="other">Password</lable>
             <input id="other" type="checkbox" name="male" value="other"><br><br>
 
-            <ol type="I">Ordered list
-                <li>Apple </li>
-                <li>Mango </li>
-                <li>Litchi </li>
-            </ol>
-            <ul type="A">Unordered list
-                <li>Apple </li>
-                <li>Mango </li>
-                <li>Litchi </li>
-            </ul>
-            <dl><b>Description list</b>
-                <dt>Title</dt>
-                <dd>thid is the description</dd>
-            </dl>
+            <lable for="phone">Phone</lable>
+            <input id="phone" type="tel" name="phone" placement="Enter the phone number"><br><br>
+
+            <lable for="age">Age</lable>
+            <input id="age" type="number" name="age" placement="Enter your age"><br><br>
+
+            <lable for="color">Color</lable>
+            <input id="color" type="color" name="color" placement="Enter your color"><br><br>
+
+            <lable for="url">Website</lable>
+            <input id="url" type="url" name="url" placement="Enter your website url"><br><br>
+
+            <lable for="palak">Alarm</lable>
+            <input id="palak" type="time" name="palak"><br><br>
+
+            <lable for="week">Week</lable>
+            <input id="week" type="week" name="week"><br><br>
+
+            <lable for="month">Month</lable>
+            <input id="month" type="month" name="month"><br><br>
+
+            <lable for="vol"> Select a volume</lable>
+            <input id="vol" type="range" name="vol"><br><br>
+
+            <lable for="search">Search</lable>
+            <input id="search" type="search" name="search" placement="Enter a search"><br><br>
+
             <button name="button" type="submit">Send data</button>
             <button type="reset">reset data</button>
 
