--- a/form.html
+++ b/form.html
@@ -11,6 +11,15 @@
         input {
             color: chocolate;
         }
+        
+        select {
+            color: rgb(4, 143, 78);
+        }
+        
+        button {
+            color: rgb(1, 1, 1);
+            background-color: rgb(240, 192, 178);
+        }
     </style>
 
 </head>
@@ -20,65 +29,78 @@
         <fieldset>
             <legend>Enquiry</legend>
             <lable for="name">Name</lable>
-            <input id="name" placeholder="Enter Your Name" type="text" value="name"><br><br>
+            <input id="name" placeholder="Enter Your Name" type="text" name="name"><br><br>
             <lable for="email">Email</lable>
-            <input id="email" placeholder="Enter Your Email" type="email" value="email"><br><br>
+            <input id="email" placeholder="Enter Your Email" type="email" name="email"><br><br>
             <lable for="password">Password</lable>
-            <input id="password" placeholder="Enter Your Password" type="password" value="password"><br><br>
+            <input id="password" placeholder="Enter Your Password" type="password" name="password"><br><br>
             <select>
                 <optgroup label="india">
-                    <option value="#"> Select Your Country</option>
+                    <option value="#"> <b> Select Your Country </b></option>
                     <option value="india"> india</option>
                     <option value="usa"> USA</option>
                     <option value="china"> China</option>
                 </optgroup>    
 
             </select><br><br>
-            <lable for="male">Male</lable>
-            <input id="male" type="radio" name="male" value="male"><br><br>
-            <lable for="female">Female</lable>
-            <input id="female" name="male" type="radio" value="female"><br><br>
-            <lable for="other">transgender</lable>
-            <input id="other" type="radio" name="male" value="other"><br><br>
-            <lable for="file">File:</lable>
-            <input id="file" type="file"><br><br>
+            <div>
+                <lable for="male">Male</lable>
+                <input id="male" type="radio" name="male" value="male"><br><br>
+                <lable for="female">Female</lable>
+                <input id="female" name="male" type="radio" value="female"><br><br>
+                <lable for="other">Other</lable>
+                <input id="other" type="radio" name="male" value="other"><br><br>
 
-            <lable for="male">Male</lable>
-            <input id="male" type="checkbox" name="male" value="male"><br><br>
-            <lable for="female">Female</lable>
-            <input id="female" name="male" type="checkbox" value="female"><br><br>
-            <lable for="other">Password</lable>
-            <input id="other" type="checkbox" name="male" value="other"><br><br>
 
-            <lable for="phone">Phone</lable>
-            <input id="phone" type="tel" name="phone" placement="Enter the phone number"><br><br>
+                <lable for="file">File:</lable>
+                <input id="file" type="file"><br><br>
 
-            <lable for="age">Age</lable>
-            <input id="age" type="number" name="age" placement="Enter your age"><br><br>
 
-            <lable for="color">Color</lable>
-            <input id="color" type="color" name="color" placement="Enter your color"><br><br>
+                <lable for="male">Male</lable>
+                <input id="male" type="checkbox" name="male" value="male"><br><br>
 
-            <lable for="url">Website</lable>
-            <input id="url" type="url" name="url" placement="Enter your website url"><br><br>
+                <lable for="female">Female</lable>
+                <input id="female" name="male" type="checkbox" value="female"><br><br>
 
-            <lable for="palak">Alarm</lable>
-            <input id="palak" type="time" name="palak"><br><br>
+                <lable for="other">Other</lable>
+                <input id="other" type="checkbox" name="male" value="other"><br><br>
 
-            <lable for="week">Week</lable>
-            <input id="week" type="week" name="week"><br><br>
 
-            <lable for="month">Month</lable>
-            <input id="month" type="month" name="month"><br><br>
 
-            <lable for="vol"> Select a volume</lable>
-            <input id="vol" type="range" name="vol"><br><br>
+                <lable for="phone">Phone</lable>
+                <input id="phone" type="tel" name="phone" placement="Enter the phone number"><br><br>
 
-            <lable for="search">Search</lable>
-            <input id="search" type="search" name="search" placement="Enter a search"><br><br>
+                <lable for="age">Age</lable>
+                <input id="age" type="number" name="age" placement="Enter your age"><br><br>
 
-            <button name="button" type="submit">Send data</button>
-            <button type="reset">reset data</button>
+                <lable for="color">Color</lable>
+                <input id="color" type="color" name="color" placement="Enter your color"><br><br>
+
+                <lable for="url">Website</lable>
+                <input id="url" type="url" name="url" placement="Enter your website url"><br><br>
+
+                <lable for="palak">Alarm</lable>
+                <input id="palak" type="time" name="palak"><br><br>
+
+                <lable for="date">Date</lable>
+                <input id="date" type="date" name="date"><br><br>
+
+                <lable for="week">Week</lable>
+                <input id="week" type="week" name="week"><br><br>
+
+                <lable for="month">Month</lable>
+                <input id="month" type="month" name="month"><br><br>
+
+                <lable for="vol"> Select a volume</lable>
+                <input id="vol" type="range" name="vol"><br><br>
+
+                <lable for="search">Search</lable>
+                <input id="search" type="search" name="search" placement="Enter a search"><br><br>
+
+
+
+                <button name="button" type="submit">Send data</button>
+                <button type="reset">reset data</button>
 
         </fieldset>
     </form>
