--- a/form.html
+++ b/form.html
@@ -28,11 +28,11 @@
     <form>
         <fieldset>
             <legend>Enquiry</legend>
-            <lable for="name">Name</lable>
+            <label for="name">Name</label>
             <input id="name" placeholder="Enter Your Name" type="text" name="name"><br><br>
-            <lable for="email">Email</lable>
+            <label for="email">Email</label>
             <input id="email" placeholder="Enter Your Email" type="email" name="email"><br><br>
-            <lable for="password">Password</lable>
+            <label for="password">Password</label>
             <input id="password" placeholder="Enter Your Password" type="password" name="password"><br><br>
             <select>
                 <optgroup label="india">
@@ -44,57 +44,57 @@
 
             </select><br><br>
             <div>
-                <lable for="male">Male</lable>
+                <label for="male">Male</label>
                 <input id="male" type="radio" name="male" value="male"><br><br>
-                <lable for="female">Female</lable>
+                <label for="female">Female</label>
                 <input id="female" name="male" type="radio" value="female"><br><br>
-                <lable for="other">Other</lable>
+                <label for="other">Other</label>
                 <input id="other" type="radio" name="male" value="other"><br><br>
 
 
-                <lable for="file">File:</lable>
+                <label for="file">File:</label>
                 <input id="file" type="file"><br><br>
 
 
-                <lable for="male">Male</lable>
+                <label for="male">Male</label>
                 <input id="male" type="checkbox" name="male" value="male"><br><br>
 
-                <lable for="female">Female</lable>
+                <label for="female">Female</label>
                 <input id="female" name="male" type="checkbox" value="female"><br><br>
 
-                <lable for="other">Other</lable>
+                <label for="other">Other</label>
                 <input id="other" type="checkbox" name="male" value="other"><br><br>
 
 
 
-                <lable for="phone">Phone</lable>
+                <label for="phone">Phone</label>
                 <input id="phone" type="tel" name="phone" placement="Enter the phone number"><br><br>
 
-                <lable for="age">Age</lable>
+                <label for="age">Age</label>
                 <input id="age" type="number" name="age" placement="Enter your age"><br><br>
 
-                <lable for="color">Color</lable>
+                <label for="color">Color</label>
                 <input id="color" type="color" name="color" placement="Enter your color"><br><br>
 
-                <lable for="url">Website</lable>
+                <label for="url">Website</label>
                 <input id="url" type="url" name="url" placement="Enter your website url"><br><br>
 
-                <lable for="palak">Alarm</lable>
+                <label for="palak">Alarm</label>
                 <input id="palak" type="time" name="palak"><br><br>
 
-                <lable for="date">Date</lable>
+                <label for="date">Date</label>
                 <input id="date" type="date" name="date"><br><br>
 
-                <lable for="week">Week</lable>
+                <label for="week">Week</label>
                 <input id="week" type="week" name="week"><br><br>
 
-                <lable for="month">Month</lable>
+                <label for="month">Month</label>
                 <input id="month" type="month" name="month"><br><br>
 
-                <lable for="vol"> Select a volume</lable>
+                <label for="vol"> Select a volume</label>
                 <input id="vol" type="range" name="vol"><br><br>
 
-                <lable for="search">Search</lable>
+                <label for="search">Search</label>
                 <input id="search" type="search" name="search" placement="Enter a search"><br><br>
 
 
