--- a/task.html
+++ b/task.html
@@ -2,35 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="task.css">
+    <link rel="stylesheet" href="task.css" />
 </head>
 
 <body>
     <div class="heading">
-        <h1> Favourite Places</h1>
+        <h1>Favourite Places</h1>
         <div class="container1">
             <div class="content">
-                <h4>Taj Mahal</h4>
-                <p>qwertyuiop</p>
+                <h1>Taj Mahal</h1><br><br>
+                <p>If there was just one symbol to represent all of India,it would be the Taj Mahal.</p>
             </div>
-            <div class="image"><img src="https://res.cloudinary.com/odysseytraveller/image/fetch/f_auto,q_auto,dpr_auto,r_4,w_765,h_1147.5,c_limit/https://cdn.odysseytraveller.com/app/uploads/2018/02/Taj-Mahal-India-iStock-483076881.jpg"></div>
+            <div class="image">
+                <img src="https://img.freepik.com/free-photo/architecture-ancient-monument-world-heritage-day-celebration_23-2151297137.jpg?ga=GA1.1.2094782263.1749545716&semt=ais_hybrid&w=740" height="250" width="200" />
+            </div>
         </div>
         <div class="container2">
             <div class="content">
-                <h4>Golden Temple</h4>
-                <p>qwertyuiop</p>
+                <h1>Golden Temple</h1><br><br>
+                <p>Amritsar is world famous for beautiful and highly revered Golden Temple.</p>
             </div>
-            <div class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVXU8QcBEbjASpG381dlIZCcNp-BcgCEkhGA&s"></div>
+            <div class="image">
+                <img src="https://img.freepik.com/premium-photo/golden-temple-amritsar_163782-3659.jpg?ga=GA1.1.2094782263.1749545716&semt=ais_hybrid&w=740" height="250" width="200" />
+            </div>
         </div>
         <div class="container3">
             <div class="content">
-                <h4>Mysore Palace</h4>
-                <p>qwertyuiop</p>
+                <h1>Mysore Palace</h1><br><br>
+                <p>The Mysore Palace is a historical Palace and the royal residence at Mysore</p>
             </div>
-            <div class="image"> <img src="https://i.pinimg.com/736x/17/15/99/1715996924a261668533ccf21d211673.jpg"></div>
+            <div class="image">
+                <img src="https://media.istockphoto.com/id/1846367030/photo/mysore-palace-is-a-historical-palace-and-a-royal-residence.jpg?s=612x612&w=0&k=20&c=BPk53_Yzr6i-ayfshRyBnw3mru3kH9ZRBRVFzWl6Fvo=" height="250" width="200" />
+            </div>
         </div>
     </div>
 </body>
