--- a/form.html
+++ b/form.html
@@ -28,12 +28,20 @@
     <form>
         <fieldset>
             <legend>Enquiry</legend>
-            <label for="name">Name</label>
+            <label for="name">Name : </label>
             <input id="name" placeholder="Enter Your Name" type="text" name="name"><br><br>
-            <label for="email">Email</label>
+            <label for="email">Email : </label>
             <input id="email" placeholder="Enter Your Email" type="email" name="email"><br><br>
-            <label for="password">Password</label>
-            <input id="password" placeholder="Enter Your Password" type="password" name="password"><br><br>
+            <label for="password">Password : </label>
+            <input id="password" placeholder="Enter Your Password" type="password" name="password"><br><br><br>
+
+            <label for="phone">Phone</label>
+            <input id="phone" type="tel" name="phone" placement="Enter the phone number"><br><br>
+
+            <label for="age">Age</label>
+            <input id="age" type="number" name="age" placement="Enter your age"><br><br>
+
+            <p><b>Select a country</b></p>
             <select>
                 <optgroup label="india">
                     <option value="#"> <b> Select Your Country </b></option>
@@ -41,66 +49,57 @@
                     <option value="usa"> USA</option>
                     <option value="china"> China</option>
                 </optgroup>    
-
-            </select><br><br>
-            <div>
-                <label for="male">Male</label>
-                <input id="male" type="radio" name="male" value="male"><br><br>
-                <label for="female">Female</label>
-                <input id="female" name="male" type="radio" value="female"><br><br>
-                <label for="other">Other</label>
-                <input id="other" type="radio" name="male" value="other"><br><br>
+            </select><br><br><br>
 
 
-                <label for="file">File:</label>
-                <input id="file" type="file"><br><br>
+            <label for="male">Male</label>
+            <input id="male" type="radio" name="male" value="male">
+            <label for="female">Female</label>
+            <input id="female" name="male" type="radio" value="female">
+            <label for="other">Other</label>
+            <input id="other" type="radio" name="male" value="other"><br><br><br>
 
 
-                <label for="male">Male</label>
-                <input id="male" type="checkbox" name="male" value="male"><br><br>
-
-                <label for="female">Female</label>
-                <input id="female" name="male" type="checkbox" value="female"><br><br>
-
-                <label for="other">Other</label>
-                <input id="other" type="checkbox" name="male" value="other"><br><br>
+            <label for="file">File:</label>
+            <input id="file" type="file"><br><br><br>
 
 
+            <label for="male">Male</label>
+            <input id="male" type="checkbox" name="male" value="male">
+            <label for="female">Female</label>
+            <input id="female" name="male" type="checkbox" value="female">
+            <label for="other">Other</label>
+            <input id="other" type="checkbox" name="male" value="other"><br><br><br>
 
-                <label for="phone">Phone</label>
-                <input id="phone" type="tel" name="phone" placement="Enter the phone number"><br><br>
 
-                <label for="age">Age</label>
-                <input id="age" type="number" name="age" placement="Enter your age"><br><br>
+            <label for="color">Color</label>
+            <input id="color" type="color" name="color" placement="Enter your color"><br><br><br>
 
-                <label for="color">Color</label>
-                <input id="color" type="color" name="color" placement="Enter your color"><br><br>
+            <label for="url">Website</label>
+            <input id="url" type="url" name="url" placement="Enter your website url"><br><br><br>
 
-                <label for="url">Website</label>
-                <input id="url" type="url" name="url" placement="Enter your website url"><br><br>
+            <label for="palak">Alarm</label>
+            <input id="palak" type="time" name="palak"><br><br><br>
 
-                <label for="palak">Alarm</label>
-                <input id="palak" type="time" name="palak"><br><br>
+            <label for="date">Date</label>
+            <input id="date" type="date" name="date"><br><br><br>
 
-                <label for="date">Date</label>
-                <input id="date" type="date" name="date"><br><br>
+            <label for="week">Week</label>
+            <input id="week" type="week" name="week"><br><br><br>
 
-                <label for="week">Week</label>
-                <input id="week" type="week" name="week"><br><br>
+            <label for="month">Month</label>
+            <input id="month" type="month" name="month"><br><br><br>
 
-                <label for="month">Month</label>
-                <input id="month" type="month" name="month"><br><br>
+            <label for="vol"> Select a volume</label>
+            <input id="vol" type="range" name="vol"><br><br><br>
 
-                <label for="vol"> Select a volume</label>
-                <input id="vol" type="range" name="vol"><br><br>
-
-                <label for="search">Search</label>
-                <input id="search" type="search" name="search" placement="Enter a search"><br><br>
+            <label for="search">Search</label>
+            <input id="search" type="search" name="search" placement="Enter a search"><br><br><br>
 
 
 
-                <button name="button" type="submit">Send data</button>
-                <button type="reset">reset data</button>
+            <button name="button" type="submit">Send data</button>
+            <button type="reset">reset data</button>
 
         </fieldset>
     </form>
